--- a/src/app/author/author.component.html
+++ b/src/app/author/author.component.html
@@ -1,7 +1,7 @@
 <h1>
   {{bookAuthor}}
 </h1>
-<p-table [value]="books" responsiveLayout="scroll">
+<p-table [value]="books$ | async" responsiveLayout="scroll">
   <ng-template pTemplate="header">
       <tr>
         <th>ID</th>
@@ -12,11 +12,7 @@
       <tr>
           <td>{{books.id}}</td>
           <td>{{books.title}}</td>
-          <td>
-            <img src="{{books.img}}" alt="{{books.title}}" width="300px">
-          </td>
       </tr>
   </ng-template>
 </p-table>
 
-<button pButton class="go_back" type="button" icon="pi pi-reply" iconPos="right" label="Go back" (click)="goBack()"></button>
