--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import '../node_modules/primeng/resources/themes/bootstrap4-dark-purple/theme.css';
+// @import '../node_modules/primeng/resources/themes/bootstrap4-dark-purple/theme.css';
 
 body {
   background-color: var(--surface-a);
